# logios-brain

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0b692c2d7c13_add_content_fingerprint.py  48e8c2a1f7b3_add_memory_type_column.py  4bfa7b5e03e9_add_owner_and_agent_tokens_tables.py  7a3d9c5e1b2f_add_type_to_upsert_memory.py  efff538b1124_initial.py
app/: auth.py  celery.py  config.py  dependencies.py  embeddings.py  entity_extraction.py  logging_config.py  main.py  models.py  schemas.py  tasks.py  telemetry.py
app/auth/: __init__.py  middleware.py  pending.py  security.py
app/automation/: __init__.py  celery.py  tasks.py
app/crud/: graph.py  memory.py  skills.py
app/db/: __init__.py  database.py  neo4j.py  qdrant.py
app/email/: __init__.py  sender.py
app/genai/: __init__.py  embeddings.py  entity_extraction.py  entity_preflight.py
app/hooks/: __init__.py  evidence.py  trigger.py  working_memory.py
app/integrations/: __init__.py  claude_agent_sdk.py  goclaw.py  hermes.py  openclaw.py  pi.py  zeroclaw.py
app/mcp/: __main__.py  auth.py  server.py  tools.py
app/routes/: __init__.py  auth.py  graph.py  health.py  hooks.py  memory.py  metrics.py  skills.py
conf/: apoc.conf  neo4j.conf
conf/prometheus/: alerts.logios.yml
docs/: 00-docker.md  01-setup.md  02-schema.md  03-mcp-server.md  04-neo4j.md  05-qdrant.md  08-connecting-clients.md  10-backups.md  connecting-agents.md  connecting-hermes-agent.md  integrations.md
docs/architecture/: auth.md  (+10 more)
scripts/: backup.sh  deploy.sh  init.sh  provision.py  seed_skills.py  test_connection.py
server/: __init__.py  embeddings.py  entity_extraction.py  main.py  requirements.txt
sql/: 003_generations_table.sql  005_database_functions.sql  006_memory_type_upsert.sql
tests/: conftest.py  test_auth_router.py  test_auth_security.py  test_crud_memory.py  test_embeddings.py  test_entity_extraction.py  test_entity_extraction_live.py  test_entity_preflight.py  test_hermes_live.py  test_mcp.py  test_mcp_http.py  test_neo4j.py  test_observability.py  test_qdrant.py
(+28 files in other folders)
