[project]
name = "logios-brain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
    "psycopg>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "supabase>=2.7.4",
    "qdrant-client>=1.10.1",
    "neo4j>=5.23.1",
    "httpx>=0.27.2",
    "pydantic>=2.8.2",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "spacy>=3.8.14",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "emails>=0.6.0",
    "jinja2>=3.0.0",
    # spaCy NER model — must be a direct URL since it's not on PyPI
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    # OpenTelemetry — tracing and metrics
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-httpx>=0.47b0",
    "opentelemetry-instrumentation-celery>=0.46b0",
    "opentelemetry-sdk-extension-aws>=1.25.0",
    "prometheus-client>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
